# hikari-flare

./: .buildinfo  .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  api_reference.html  changelog.html  dev_requirements.txt  doc_requirements.txt  genindex.html  getting-started.html  guide.html  index.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  sitemap.xml
.doctrees/: api_reference.doctree  changelog.doctree  environment.pickle  getting-started.doctree  guide.doctree  index.doctree
.doctrees/api_references/: button.doctree  component.doctree  context.doctree  converters.doctree  exceptions.doctree  internals.doctree  modal.doctree  select.doctree
.doctrees/api_references/internal/: event_handler.doctree  serde.doctree
.doctrees/changelogs/: v0.doctree
.doctrees/guides/: converters.doctree  editing.doctree  modal.doctree  state.doctree
.github/workflows/: ci.yml  docs.yml  publish.yml  tests.yml
_modules/: index.html
_modules/flare/: context.html  converters.html  exceptions.html
_modules/flare/components/: base.html  button.html  modal.html  select.html
_modules/flare/context/: base.html  message.html  modal.html
_modules/flare/internal/: event_handler.html  serde.html
_sources/: api_reference.md.txt  getting-started.md.txt
_sources/api_references/: context.rst.txt  modal.rst.txt
_sources/api_references/internal/: serde.rst.txt
_sources/guides/: state.md.txt
api_references/: button.html  component.html  context.html  converters.html  exceptions.html  internals.html  modal.html  select.html
api_references/internal/: event_handler.html  serde.html
changelogs/: v0.html
docs/source/: api_reference.md  api_reference.rst  changelog.md  changelog.rst  conf.py  getting-started.md  getting-started.rst  guide.md  guide.rst  index.md  index.rst
docs/source/api_references/: button.rst  component.rst  context.rst  converters.rst  exceptions.rst  internals.rst  iterators.rst  select.rst
docs/source/api_references/internal/: event_handler.rst
docs/source/changelogs/: v0.md  v0.rst
docs/source/guides/: converters.md  converters.rst  editing.rst  modal.md  state.md  state.rst
examples/: basic.py  modal.py  tictactoe.py
flare/: __init__.py  __main__.py  component.py  context.py  converters.py  dataclass.py  exceptions.py  handle_resp.py  id.py  iterators.py  mentionable.py  row.py  serde.py  typedefs.py  utils.py
flare/components/: __init__.py  base.py  button.py  functional.py  modal.py  select.py
flare/context/: __init__.py  base.py  message.py  modal.py
flare/internal/: README.md  __init__.py  bootstrap.py  event_handler.py  handle_response.py  serde.py
guides/: converters.html  editing.html  modal.html  state.html
tests/flare/: test_component.py  test_converters.py
